Fixed dynamic contetn layout issue. Added about me section.

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -202,19 +202,17 @@ footer p {
   height: 100vh;
   align-items: center;
   justify-content: center;
-  scroll-snap-stop: center;
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
 
   width: 90%;
   height: 100%;
   align-items: center;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
 }
 
 .row {
@@ -224,12 +222,15 @@ footer p {
   align-items: center;
   width: 100%;
   height: 100%;
-  margin: 2rem 0;
 }
 
 /*Individual sections*/
 #banner-section {
   position: relative;
+}
+
+#banner-section h1 {
+  font-size: 4rem;
 }
 
 #banner-section h1,
@@ -412,7 +413,7 @@ h2 {
 }
 
 #project-section {
-  background-color: #1012148e;
+  background-color: #1310148e;
   box-shadow: inset 0 0 12px 1px rgb(12, 13, 15);
 }
 
@@ -431,25 +432,88 @@ h2 {
   scroll-snap-type: y mandatory;
 }
 
-.project-list-container {
-  display: flex;
-  flex-direction: column;
+.project-grid-container {
+  display: grid;
   width: 100%;
+  max-width: 450px;
+  padding: 0 2rem;
   min-height: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-rows: repeat(100, 100%);
+  row-gap: 5rem;
+  column-gap: 3rem;
+
 }
 
 .project-container {
-  display: flex;
   position: relative;
+  width: 100%;
+  height: fit-content;
+  flex-direction: column;
+  background-color: #00000054;
+  align-items: center;
+  box-shadow: 0 0 70px 5px rgba(17, 21, 24, 0.2);
+}
+
+.project-details-top,
+.project-details-bottom {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 1rem;
+  min-height: 150px;
+}
+
+.project-details-top h2 {
+  line-height: 1.1;
+}
+
+.project-details-top p {
+
+  font-family: var(--font-primary);
+}
+
+.project-links a {
+  line-height: 2;
+  font-size: .9rem;
+  font-weight: 600;
+  color: rgb(255, 255, 255);
+}
+
+.details-content {
+  display: none;
+  flex-direction: column;
+  max-height: fit-content;
+  color: antiquewhite;
+}
+
+.details-content p {
+  color: antiquewhite;
+  margin: .25rem;
+}
+
+.project-media {
+  display: flex;
 
   width: 100%;
+  max-height: 70%;
+  overflow: hidden;
+}
+
+.project-media img {
+  width: 100%;
   height: 100%;
-  margin: 10% 0;
+}
 
-  background-color: #000000fb;
-  padding: 2rem;
+.project-details-bottom a {
+  position: relative;
+  cursor: pointer;
+}
 
-  box-shadow: 0 0 70px 5px rgba(17, 21, 24, 0.2);
+
+.project-media video {
+  width: 100%;
+
 }
 
 .filter-category-container {
@@ -463,6 +527,7 @@ h2 {
 
 .filter-category-container h2 {
   font-size: 4rem;
+  white-space: nowrap;
 }
 
 #filter-category {
@@ -519,6 +584,42 @@ h2 {
   color: rgb(215, 255, 36);
 }
 
+#about-section {
+  height: fit-content;
+  padding: 1rem;
+}
+
+.aboutMe {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.aboutMe h1 {
+  font-size: 2rem
+}
+
+.aboutMe p {
+  font-size: 1.5rem;
+  color: beige;
+  margin: .5rem 0;
+  letter-spacing: 1px;
+}
+
+.aboutMe_experience {
+  display: flex;
+  width: 100%;
+  margin: 1.5rem 0;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  color: beige;
+}
+
+.aboutMe_experience img {
+  width: 55px;
+}
+
 @keyframes spin {
   0% {
     --card-border-rot: 0deg;
@@ -545,9 +646,15 @@ h2 {
   background: #6df743;
 }
 
-@media screen and (min-width: 810px) {
+@media screen and (min-width: 900px) {
   html {
-    font-size: 12px;
+    font-size: 16px;
+  }
+
+
+
+  #about-section {
+    height: 100vh;
   }
 
   .content-card {
@@ -575,32 +682,35 @@ h2 {
   }
 
   .row {
-    margin: 1em 0;
     height: 100%;
   }
 
-  .row-30 {
-    width: 30%;
+  .row-20 {
+    max-width: 20%;
   }
 
   .row-33 {
-    width: 33%;
+    max-width: 33%;
   }
 
   .row-40 {
-    width: 40%;
+    max-width: 40%;
   }
 
   .row-50 {
-    width: 50%;
+    max-width: 50%;
+  }
+
+  .row-60 {
+    max-width: 50%;
   }
 
   .row-70 {
-    width: 70%;
+    max-width: 70%;
   }
 
   .row-100 {
-    width: 100%;
+    max-width: 100%;
   }
 
   .nav-list a {
@@ -616,7 +726,20 @@ h2 {
     color: #9e543d;
   }
 
-  .project-list {
+  .project-grid-container {
+    max-width: 1400px;
+
+    margin-top: 5rem;
+    grid-template-columns: repeat(2, minmax(300px, 1fr));
+    grid-template-rows: auto;
+    column-gap: 5rem;
+  }
+
+  .project-container_wOffset {
+    margin-top: 50%;
+  }
+
+  /* .project-list {
     flex-direction: column;
 
     width: 100%;
@@ -633,7 +756,7 @@ h2 {
     width: 35%;
     height: 60%;
     max-height: 850px;
-  }
+  } */
 
   .offset-container {
     margin-top: 25%;
@@ -648,5 +771,9 @@ h2 {
   .container {
     height: 100%;
     width: 80%;
+  }
+
+  .project-grid-container {
+    column-gap: 15rem;
   }
 }
